--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "echarts": "^3.8.5",
     "element-ui": "^2.0.8",
     "faker": "^4.1.0",
     "lodash": "^4.17.4",
